--- a/html/a.html
+++ b/html/a.html
@@ -44,7 +44,7 @@
 			<td height="20"><input type="reset" name="Submit2" value="ÖØÖÃ"></td>
 		</tr>
 		<tr>
-			<td height="20" width="408"><a href="http://127.0.0.1:8000/login/"> ·µ»ØµÇÂ½ÍøÒ³</a></td>
+			<td height="20" width="408"><a href="c.html"> ·µ»ØµÇÂ½ÍøÒ³</a></td>
 		</tr>
 	</tbody>
 </table>
